# multilingual-ai-human-text-detection

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: en_qa.jsonl  vi_qa.jsonl  zh_qa.jsonl
docs/: README.md  api.md  data.md  models.md
notebooks/: 48706094_assignment1.ipynb  data_crawler.ipynb  dataset_builder.ipynb
scripts/: demo.py  infer.py  serve_api.py  train_statistical.py  train_transformer.py  web_demo.py
src/multilingual_ai_detection/: __init__.py
src/multilingual_ai_detection/data/: __init__.py  data_loader.py  data_splitter.py
src/multilingual_ai_detection/evaluation/: __init__.py  evaluator.py  metrics.py
src/multilingual_ai_detection/models/: __init__.py  statistical.py  transformer.py
src/multilingual_ai_detection/training/: __init__.py  common.py  statistical.py  transformer.py
src/multilingual_ai_detection/utils/: __init__.py  data_utils.py  text_processing.py
tests/: test_utils.py
